# microservice-rust-cat

./: README.md
.github/workflows/: ci-cd.yml
micro-cat/: .gitignore  Cargo.toml  dockerfile  example.env
micro-cat/.github/workflows/: ci-cd.yml
micro-cat/src/: main.rs
